# kaikei-local

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: pages.yml  verify-round.yml
api-server/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
api-server/app/: layout.tsx  page.tsx
api-server/lib/: license.ts
docs/: changelog.html  deployment.md  index.html  install.html  thanks.html
docs/en/: index.html
scripts/: build-all.sh  build-signed.sh  capture-lp-screenshots.mjs  etax_sample.ts  gen_real_xtx.mjs  gen_sample.mjs  install-and-open.sh  make-dmg.sh  release-followup.sh  release-precheck.sh  release-rollback.sh  release-setup-credentials.sh  release-status.sh  release.sh  setup-updater-keys.sh  verify-app.sh  verify-release.sh
scripts/verify/: window-bounds.applescript
site/: index.html  legal.html
site/en/: index.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classifier.rs  lan_server.rs  launchd.rs  lib.rs  main.rs  migrations.rs  photos.rs  scanner.rs  vision.rs
src/app/: globals.css  layout.tsx
src/components/: account-select.tsx  ai-ocr-consent.tsx  ai-ocr-quota-banner.tsx  boot.tsx  command-palette.tsx  image-cropper.tsx  journal-form.tsx  motion.tsx  navigate-bridge.tsx  onboarding.tsx  period-filter.tsx  receipt-drop-zone.tsx  receipt-upload.tsx  sidebar.tsx  toast.tsx  (+1 more)
(+133 files in other folders)
