[package]
name = "kaikei"
version = "0.1.0"
description = "kaikei - 個人事業主向けオフライン会計アプリ"
authors = ["kaikei"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kaikei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# LAN HTTP server for phone upload
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
local-ip-address = "0.6"
qrcode = "0.14"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
block = "0.1"
